<resources>

    <string-array name="filter_types">
        <item>Blur</item>
        <item>Gaussian</item>
        <item>Motion</item>
        <item>Smooth</item>
        <item>Average</item>
    </string-array>

    <string-array name="formula_types">
        <item>Square</item>
        <item>Icon</item>
        <item>Hexagon</item>
    </string-array>

    <string name="app_name">Fractal Wallpaper</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="tabbed_fragment_label">Tabbed Fragment</string>
    <string name="square">Square</string>
    <string name="content_description_square">Generate Square Image Tile</string>
    <string name="scratch">Icon</string>
    <string name="content_description_icon">Generate Icon Image Tile</string>
    <string name="hexagon">Hexagon</string>
    <string name="content_description_hexagon">Generate Hexagon Image Tile</string>
    <string name="resume_calc">Resume</string>
    <string name="stop_calc">Pause</string>
    <string name="content_description_tileimage">Drag and zoom the image as it generates</string>
    <string name="hitsmin_string">Min - </string>
    <string name="content_description_hits">Most times any pixel in the Image Tile has been hit</string>
    <string name="hitsmax_string">Max - </string>

    <string name="goto_tile_editor_left"><![CDATA[<—        Tile Editor]]></string>
    <string name="goto_tile_editor_right"><![CDATA[Tile Editor   —>]]></string>
    <string name="content_description_open_editor_frag">Switch to Image edit page</string>

    <string name="choose_palette">Palette</string>
    <string name="content_description_palette">Select palette</string>
    <string name="right"><![CDATA[>]]></string>
    <string name="content_description_palette_right">Choose next palette</string>
    <string name="left"><![CDATA[<]]></string>
    <string name="content_description_palette_left">Choose previous palette</string>

    <string name="left_right"><![CDATA[<>]]></string>
    <string name="content_description_blur_select">Select next Image Filter</string>
    <string name="perform_blur">Apply Filter</string>
    <string name="content_description_blur_perform">Perform Image Filter on Image</string>
    <string name="blur">Blur</string>
    <string name="content_description_blur">Chosen Image Filter</string>

    <string name="goto_generate_tile"><![CDATA[<— Generate Tile]]></string>
    <string name="content_description_open_generate_frag">Switch to Generate Image page</string>
    <string name="undo_all_changes">Undo All Changes</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="save_wallpaper">Save    Wallpaper</string>
    <string name="goto_save_wallpaper"><![CDATA[Save Wallpaper —>]]></string>
    <string name="content_description_open_savewallpaper_frag">Switch to save Image to Wallpaper page</string>
    <string name="content_description_adjust_spread">Slider value affecting Colour selection</string>
    <string name="content_description_adjust_spread_image">Slider value ColourRange Image</string>
    <string name="add_new_palette_a">New 1</string>
    <string name="content_description_new_palette_a">Create new ColourRange using formula 1</string>
    <string name="add_new_palette_b">New 2</string>
    <string name="content_description_new_palette_b">Create new ColourRange using formula 2</string>
    <string name="fullscreen_image">Fullscreen Image</string>
    <string name="save_image">Save Image</string>
    <string name="content_description_save_image">Save image to Pictures folder</string>
    <string name="set_to_zero">Set Upper Limit</string>
    <string name="linear">Linear</string>
    <string name="content_description_colour_distribution">How to apply ColourRange to generated results </string>
    <string name="reset_the_minimum_hits_per_pixel_to_0">Reset the minimum hits per pixel to 0</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="data_agreement">Data Agreement</string>
    <string name="iconocat_homepage">Iconocat Homepage</string>

    <string name="resume_current_image_generation">Resume current image generation</string>
    <string name="restore_image_data_back_to_intial_state">Restore Image data back to initial state</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="box_blur">Box Blur</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="smooth">Smooth</string>
    <string name="choose_filter">Choose Filter</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>