<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/constraint_background"
    tools:context=".SecondFragment">

    <LinearLayout
        android:id="@+id/second_page"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tile_image_generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/undo_all_changes"
            style="@style/outlineButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/restore_image_data_back_to_intial_state"
            android:text="@string/undo_all_changes" />

        <include
            android:id="@+id/include_choose_palette"
            layout="@layout/choose_palette"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/constraintChooseBlur"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/constraint_background"
            android:orientation="horizontal">

            <Button
                android:id="@+id/blur_left"
                style="@style/outlineButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetRight="1dp"
                android:contentDescription="@string/content_description_blur_select"
                android:text="@string/left_right" />

            <Button
                android:id="@+id/blur_right"
                style="@style/outlineButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_blur_perform"
                android:text="@string/perform_blur" />

            <TextView
                android:id="@+id/blur"
                style="@style/outlineButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textAlignment="viewStart"
                android:contentDescription="@string/content_description_blur"
                android:text="@string/blur" />

            <Button
                android:id="@+id/set_to_zero"
                style="@style/outlineButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:contentDescription="@string/reset_the_minimum_hits_per_pixel_to_0"
                android:text="@string/set_to_zero" />

        </LinearLayout>


        <include
            android:id="@+id/data_colour_constraint"
            layout="@layout/analysis_type"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/constraint_background">

            <ImageButton
                android:id="@+id/palette_scaler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/content_description_adjust_spread_image"
                android:scaleType="fitXY"
                android:background="@color/constraint_background"/>

            <com.fractal.tiler.MySeekbar
                android:id="@+id/seekBar"
                style="@style/outlineButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:contentDescription="@string/content_description_adjust_spread"
                android:max="255"
                android:progress="0"
                android:progressTint="@color/progress_thumb_tint"
                android:secondaryProgress="50"
                android:thumbTint="@color/progress_thumb_tint" />

        </FrameLayout>
<!--

        <include
            android:id="@+id/includePaletteScale"
            layout="@layout/palette_scaler" />
-->

        <LinearLayout
            android:id="@+id/navigate_to"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backto_firstfragment"
                style="@style/outlineButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetRight="1dp"
                android:contentDescription="@string/content_description_open_generate_frag"
                android:text="@string/goto_generate_tile"/>

            <Button
                android:id="@+id/to_savewallpaper"
                style="@style/outlineButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:insetLeft="1dp"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_open_savewallpaper_frag"
                android:text="@string/goto_save_wallpaper" />

        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/tile_image_generate"
        layout="@layout/tile_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_page"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>