<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/constraint_background"
    tools:context=".FirstFragment">

    <LinearLayout
        android:id="@+id/main_page"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tile_image_generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Start - Generating Buttons -->
        <LinearLayout
            android:id="@+id/generate_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/constraint_background">

            <Button
                android:id="@+id/run_square"
                style="@style/outlineButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_square"
                android:foreground="@drawable/square_button_states"
                android:insetRight="1dp" />

            <Button
                android:id="@+id/run_scratch"
                style="@style/outlineButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetRight="1dp"
                android:foreground="@drawable/scratch_button_states"
                android:contentDescription="@string/content_description_icon" />

            <Button
                android:id="@+id/run_hex"
                style="@style/outlineButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:foreground="@drawable/icon_button_states"
                android:contentDescription="@string/content_description_hexagon" />

        </LinearLayout>

        <!-- Start - Pause Resume Button -->
        <Button
            android:id="@+id/resume"
            style="@style/outlineButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:foreground="@drawable/resume_states"
            android:contentDescription="@string/resume_current_image_generation"
            android:visibility="visible" >
        </Button>

        <!-- Start - Choose ColorRange Buttons -->
        <LinearLayout
            android:id="@+id/pal_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/greyscale"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/color_range_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:insetRight="1dp"
                android:contentDescription="@string/content_description_icon"
                android:background="@drawable/layer_background_bitmap"
                android:foreground="@drawable/colorrange_right_states" />


            <ImageButton
                android:id="@+id/color_range_mid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_icon"
                android:foreground="@drawable/layer_background_bitmap" />


            <ImageButton
                android:id="@+id/color_range_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:insetLeft="1dp"
                android:contentDescription="@string/content_description_icon"
                android:background="@drawable/layer_background_bitmap"
                android:foreground="@drawable/colorrange_left_states" />

        </LinearLayout>

<!--

        &lt;!&ndash; Start - Colour Style Button &ndash;&gt;
        <include layout="@layout/choose_palette" />
-->

        <LinearLayout
            android:id="@+id/analysis_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/constraint_background"
            android:orientation="horizontal"
            tools:context=".FirstFragment">

            <include layout="@layout/analysis_type" />

        </LinearLayout>

        <!-- Start - Generation Info  -->
        <TextView
            android:id="@+id/first_maxhits"
            style="@style/outlineButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/hitsmin_string"
            android:contentDescription="@string/content_description_hits">
        </TextView>

        <!-- Start - Goto Editor Button -->
<!-- 9826903727608879537 -->

        <Button
            android:id="@+id/switch_to_editor"
            style="@style/outlineButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:text="@string/goto_tile_editor_right"
            android:contentDescription="@string/content_description_open_editor_frag" >
        </Button>

    </LinearLayout>

    <include
        android:id="@+id/tile_image_generate"
        layout="@layout/tile_layout"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_page"
        tools:context=".FirstFragment"/>

</androidx.constraintlayout.widget.ConstraintLayout>