<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/constraint_background"
    tools:context=".DataFragment">

    <Button
        android:id="@+id/undo_changes"
        style="@style/outlineButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/undo_all_changes"
        android:text="@string/undo_all_changes"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/apply_smooth"
            style="@style/outlineButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textinput_layout"
            app:layout_constraintHorizontal_weight="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/perform_blur"
            android:text="@string/perform_blur" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1.0"
            app:layout_constraintStart_toEndOf="@id/apply_smooth"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="2dp"
            android:background="@color/white"
            android:backgroundTint="@color/white">

            <AutoCompleteTextView
                android:id="@+id/autotextview"
                style="@style/outlineButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:hint="@string/choose_filter"
                android:text="@string/box_blur"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        style="@style/outlineButton"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"/>

    <com.fractal.tiler.MySeekbar
        android:id="@+id/maxhit_seeker"
        style="@style/outlineButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="false"
        android:hint="@string/content_description_adjust_spread_image"
        android:background="@drawable/layer_bitmap_stroke"
        android:max="512"
        android:progress="512"
        android:progressTint="@color/progress_thumb_tint"
        android:secondaryProgress="512"
        android:thumbTint="@color/progress_thumb_tint" />


</LinearLayout>