<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.NoTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <com.fractal.tiler.MyImageView
        android:id="@+id/fullscreenImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:contentDescription="@string/fullscreen_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_to_secondFragment"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/semi_trnspt"
        android:contentDescription="@string/content_description_open_editor_frag"
        android:insetTop="2dp"
        android:insetBottom="2dp"
        android:text="@string/goto_tile_editor_left"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/text_color_highlights"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="3sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_image"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeColor="@color/button_stroke" />


    <Button
        android:id="@+id/save_image"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/semi_trnspt"
        android:contentDescription="@string/content_description_open_editor_frag"
        android:insetTop="2dp"
        android:insetBottom="2dp"
        android:text="@string/save_image"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/text_color_highlights"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="3sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/back_to_secondFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_wallpaper"
        app:strokeColor="@color/button_stroke" />

    <Button
        android:id="@+id/save_wallpaper"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/semi_trnspt"
        android:contentDescription="@string/content_description_save_image"
        android:insetTop="2dp"
        android:insetBottom="2dp"
        android:text="@string/save_wallpaper"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/text_color_highlights"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="3sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toTopOf="@id/save_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/apply_smooth"
        app:strokeColor="@color/button_stroke" />

    <Button
        android:id="@+id/apply_smooth"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/semi_trnspt"
        android:contentDescription="@string/content_description_save_image"
        android:insetTop="2dp"
        android:insetBottom="2dp"
        android:text="@string/smooth"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/text_color_highlights"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="3sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toTopOf="@id/save_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/button_stroke" />

    <View
        android:id="@+id/shader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semi_trnspt"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>